docs/api/qiskit/0.19/qiskit.circuit.Gate.mdx
---
title: Gate (v0.19)
description: API reference for qiskit.circuit.Gate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.Gate
---

# Gate

<Class id="qiskit.circuit.Gate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/gate.py" signature="Gate(name, num_qubits, params, label=None)" modifiers="class">
  Unitary gate.

  Create a new gate.

  **Parameters**

  *   **name** (`str`) – The Qobj name of the gate.
  *   **num\_qubits** (`int`) – The number of qubits the gate acts on.
  *   **params** (`List`) – A list of parameters.
  *   **label** (`Optional`\[`str`]) – An optional label for the gate.

  ## Attributes

  <span id="gate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.Gate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="gate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.Gate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="gate-label" />

  ### label

  <Attribute id="qiskit.circuit.Gate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="gate-params" />

  ### params

  <Attribute id="qiskit.circuit.Gate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="gate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.Gate.add_decomposition" signature="Gate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="gate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.Gate.assemble" signature="Gate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="gate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.Gate.broadcast_arguments" signature="Gate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="gate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.Gate.c_if" signature="Gate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="gate-control" />

  ### control

  <Function id="qiskit.circuit.Gate.control" signature="Gate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="gate-copy" />

  ### copy

  <Function id="qiskit.circuit.Gate.copy" signature="Gate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="gate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.Gate.inverse" signature="Gate.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="gate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.Gate.is_parameterized" signature="Gate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="gate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.Gate.mirror" signature="Gate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="gate-power" />

  ### power

  <Function id="qiskit.circuit.Gate.power" signature="Gate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="gate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.Gate.qasm" signature="Gate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="gate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.Gate.repeat" signature="Gate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="gate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.Gate.to_matrix" signature="Gate.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.

    **Return type**

    `ndarray`
  </Function>
</Class>

